[gd_scene load_steps=7 format=3 uid="uid://b2wyldslu3fnh"]

[ext_resource type="Script" uid="uid://b4woa8kj0huvq" path="res://entities/player/all/player.gd" id="1_lvxji"]
[ext_resource type="Script" uid="uid://d350u8evihs1u" path="res://addons/netfox/rollback/rollback-synchronizer.gd" id="3_vak66"]
[ext_resource type="PackedScene" uid="uid://dp8abkasj7kyt" path="res://models/ui/indicators/BlueIndicatorCircle.glb" id="4_0owmy"]
[ext_resource type="Script" uid="uid://dour8fehaaugp" path="res://addons/netfox/tick-interpolator.gd" id="4_vak66"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g2els"]
radius = 0.8
height = 2.6

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_d8ble"]
properties/0/path = NodePath(".:current_animation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:current_animation_blend_time")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:_current_hero_id")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:is_knocked")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:is_standing_back_up")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:is_respawning")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:is_channeling")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath(".:knockback_timer")
properties/7/spawn = true
properties/7/replication_mode = 1

[node name="Player_CharacterBody3D" type="CharacterBody3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
collision_layer = 3
script = ExtResource("1_lvxji")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
shape = SubResource("CapsuleShape3D_g2els")

[node name="BlueIndicatorCircle" parent="." instance=ExtResource("4_0owmy")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.0870759, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_d8ble")

[node name="MultiplayerSynchronizer2" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_d8ble")
public_visibility = false

[node name="HeroSocket" type="Node3D" parent="."]

[node name="RollbackSynchronizer" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("3_vak66")
root = NodePath("..")
enable_prediction = true
state_properties = Array[String]([":global_transform", ":velocity", ":current_animation", "HeroSocket:rotation"])
input_properties = Array[String](["Brain:move_direction", "Brain:jump_strength", "Brain:using_combat_action_1", "Brain:using_combat_action_2", "Brain:using_combat_action_3", "Brain:using_combat_action_4", "Brain:opening_in_game_menu"])
metadata/_custom_type_script = "uid://d350u8evihs1u"

[node name="TickInterpolator" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("4_vak66")
root = NodePath("..")
properties = Array[String]([":global_transform", ":current_animation"])
metadata/_custom_type_script = "uid://dour8fehaaugp"
